--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ bot/src/main/java/bot_telegram_for_organize_football/bot/AuxiliarClass.java
 bot/target/classes/bot_telegram_for_organize_football/bot/AuxiliarClass.class
 
 bot/target/classes/META-INF/
+
+bot/to_do
