--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ bot/target/classes/bot_telegram_for_organize_football/bot/Organize5FootballBot.c
 bot/src/main/java/bot_telegram_for_organize_football/bot/AuxiliarClass.java
 
 bot/to_do
+
+src/main/java/bot_telegram_for_organize_football/bot/AuxiliarClass.java
