--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
        <version>3.3</version>
        <classifier>jar-with-dependencies</classifier>
     </dependency>
+    <dependency>
+        <groupId>com.vdurmont</groupId>
+        <artifactId>emoji-java</artifactId>
+        <version>3.2.0</version>
+    </dependency>
     
   </dependencies>
       <build>
